# mcp-thinking-support

./: .editorconfig  .gitignore  .markdownlint.yml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
src/thinking_support/: __init__.py  server.py
src/thinking_support/tools/: __init__.py  critical.py  dialectical.py  logical.py  mece.py  scamper.py  sequential.py  stepwise.py  why_analysis.py
tests/: test_critical.py  test_dialectical.py  test_logical.py  test_mece.py  test_scamper.py  test_sequential.py  test_server.py  test_stepwise.py  test_why_analysis.py
